--- a/index.html
+++ b/index.html
@@ -13,53 +13,53 @@
     <section class="container">
         <h3>Қорапты 50% дейін жеңілдікпен ашыңыз!</h3>
         <div class="content">
-            <div class="contentbox" data-check="box">
-                <img class="closedbox" src="./img/closed_box.png" alt="closed_box">
+            <div class="contentbox" data-check="box-1">
                 <img class="openedbox hidden" src="./img/opened_box2.png" alt="opened_box">
+                <img class="closedbox"  src="./img/closed_box.png" alt="closed_box">
                 <p class="contentbox__sale hidden">50%</p>
             </div>
-            <div class="contentbox" data-check="box">
-                <img class="closedbox" src="./img/closed_box.png" alt="closed_box">
+            <div class="contentbox" data-check="box-2">
                 <img class="openedbox hidden" src="./img/opened_box2.png" alt="opened_box">
+                <img class="closedbox" src="./img/closed_box.png" alt="closed_box">
                 <p class="contentbox__sale hidden">50%</p>
             </div>
-            <div class="contentbox" data-check="box">
-                <img class="closedbox" src="./img/closed_box.png" alt="closed_box">
+            <div class="contentbox" data-check="box-3">
                 <img class="openedbox hidden" src="./img/opened_box2.png" alt="opened_box">
+                <img class="closedbox" src="./img/closed_box.png" alt="closed_box">
                 <p class="contentbox__sale hidden">50%</p>
             </div>
-            <div class="contentbox" data-check="box">
-                <img class="closedbox" src="./img/closed_box.png" alt="closed_box">
+            <div class="contentbox" data-check="box-4">
                 <img class="openedbox hidden" src="./img/opened_box2.png" alt="opened_box">
+                <img class="closedbox" src="./img/closed_box.png" alt="closed_box">
                 <p class="contentbox__sale hidden">50%</p>
             </div>
-            <div class="contentbox" data-check="box">
-                <img class="closedbox" src="./img/closed_box.png" alt="closed_box">
+            <div class="contentbox" data-check="box-5">
                 <img class="openedbox hidden" src="./img/opened_box2.png" alt="opened_box">
+                <img class="closedbox" src="./img/closed_box.png" alt="closed_box">
                 <p class="contentbox__sale hidden">50%</p>
             </div>
-            <div class="contentbox" data-check="box">
-                <img class="closedbox" src="./img/closed_box.png" alt="closed_box">
+            <div class="contentbox" data-check="box-6">
                 <img class="openedbox hidden" src="./img/opened_box2.png" alt="opened_box">
+                <img class="closedbox" src="./img/closed_box.png" alt="closed_box">
                 <p class="contentbox__sale hidden">50%</p>
             </div>
-            <div class="contentbox" data-check="box">
-                <img class="closedbox" src="./img/closed_box.png" alt="closed_box">
+            <div class="contentbox" data-check="box-7">
                 <img class="openedbox hidden" src="./img/opened_box2.png" alt="opened_box">
+                <img class="closedbox" src="./img/closed_box.png" alt="closed_box">
                 <p class="contentbox__sale hidden">50%</p>
             </div>
-            <div class="contentbox" data-check="box">
-                <img class="closedbox" src="./img/closed_box.png" alt="closed_box">
+            <div class="contentbox" data-check="box-8">
                 <img class="openedbox hidden" src="./img/opened_box2.png" alt="opened_box">
+                <img class="closedbox" src="./img/closed_box.png" alt="closed_box">
                 <p class="contentbox__sale hidden">50%</p>
             </div>
-            <div class="contentbox" data-check="box">
-                <img class="closedbox" src="./img/closed_box.png" alt="closed_box">
+            <div class="contentbox" data-check="box-9">
                 <img class="openedbox hidden" src="./img/opened_box2.png" alt="opened_box">
+                <img class="closedbox" src="./img/closed_box.png" alt="closed_box">
                 <p class="contentbox__sale hidden">50%</p>
             </div>
-       
-            
+       </div>
+            <div>
             <img src="" alt="" class="elements__photo">
             </div>
             <div class="popup__empty hidden">
@@ -75,7 +75,7 @@
                 <p class="accept__subtitle">Cіз Dash Diet-ті <span class="span">39 руб.!</span>  ала аласыз</p>
                 <button class="btn__accept">OK</button>
             </div>
-            <div class="offer hidden">
+            <div class="offer">
                 <img class="offer__img" src="./img/order_tube.png" alt="">
                 <div class="offer__text">
                     <p class="offer__text-main">39 руб. <span class="span">«Dash Diet» </span><br>
