--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
             <div class="offer">
                 <img class="offer__img" src="./img/order_tube.png" alt="">
                 <div class="offer__text">
-                    <p class="offer__text-main">39 руб. <span class="span">«Dash Diet» </span><br>
-                        алу үшін пішінді толтырыңыз</p>
-                        <p class="offer__sale"78 руб.</p>
+                    <p class="offer__text-main">39 руб. <span class="span">«Dash Diet»</span></p> 
+                       <p class="offer__text-main">алу үшін пішінді толтырыңыз</p>
+                        <p class="offer__sale">78 руб.</p>
                     <p class="offer__descr">Сізге тек аты-жөніңіз бен телефон нөміріңізді енгізу жеткілікті.
                         Асықшы! Уақытыңыз қалды:</p>
                         <p class="offer__timer">00:00</p>
@@ -93,6 +93,7 @@
                         <p class="offer__subdescr">Шифрлау деректеріңізді қорғауға кепілдік беру үшін пайдаланылады</p>
                 </div>
             </div>
+            
     </section>
     <script src="./js/app.js"></script>
 </body>
