--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./style/style.css">
     <title>Task Naturoteka</title>
 </head>
-
+git
 <body>
     <section class="container">
         <h3>Қорапты 50% дейін жеңілдікпен ашыңыз!</h3>
